fix: resolved light/dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@ html:not(.dark) {
 
 html:not(.dark) body {
   background-color: #ffffff;
-  color: #171717;
+  color: #000000;
 }
 
 html:not(.dark) a {
